--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,8 @@ bibtex_bibfiles:
 
 # Information about where the book exists on the web
 repository:
-  url: https://github.com/executablebooks/jupyter-book  # Online location of your book
-  path_to_book: docs  # Optional path to your book, relative to the repository root
-  branch: master  # Which branch of the repository should be used when creating links (optional)
+  url: https://github.com/dpavancini/eng-de-analytics-livro  # Online location of your book
+  branch: main  # Which branch of the repository should be used when creating links (optional)
 
 # Add GitHub buttons to your book
 # See https://jupyterbook.org/customize/config.html#add-a-link-to-your-repository
@@ -33,3 +32,4 @@ html:
 
 exclude_patterns:
 - venv/*
+- "README.md"  # Patterns to skip when building the book. Can be glob-style (e.g. "*skip.ipynb")
