--- a/_toc.yml
+++ b/_toc.yml
@@ -4,6 +4,18 @@
 format: jb-book
 root: intro
 chapters:
+- file: chapters/01/intro.md
+  sections:
+    - file: chapters/01/01/por_que_analytics.md
+    - file: chapters/01/02/carreiras_atuais.md
+    - file: chapters/01/03/responsabilidades.md
+    - file: chapters/01/04/northwind.md
+- file: chapters/02/intro.md
+  sections:
+    - file: chapters/02/01/5_vs.md
+    - file: chapters/02/02/volume.md
+    - file: chapters/02/03/velocidade.md
+    - file: chapters/02/04/variedade.md    
 - file: chapters/05/intro.md
   sections:
     - file: chapters/05/01/papel_mas_dw.md
@@ -11,5 +23,4 @@ chapters:
     - file: chapters/05/03/esquema_estrela.md
     - file: chapters/05/04/arquiteturas_dw.md
     - file: chapters/05/leia_mais.md
-- file: notebooks
-- file: markdown-notebooks
+
