Added intermediary chapters and logo

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 
 title: Engenharia de Analytics
 author: Daniel Paulon Avancini
-logo: logo.png
+logo: logo_livro.png
 
 # Force re-execution of notebooks on each build.
 # See https://jupyterbook.org/content/execute.html
