--- a/_toc.yml
+++ b/_toc.yml
@@ -53,6 +53,11 @@ parts:
         - file: chapters/05/06/sub.ipynb
         - file: chapters/05/leia_mais.md
     - file: chapters/06/intro.md
+      sections:
+        - file: chapters/06/01/boas_praticas_prog.md
+        - file: chapters/06/02/boas_praticas_dev.md
+        - file: chapters/06/03/intro_git.md
+        - file: chapters/06/leia_mais.md
     - file: chapters/07/intro.md
   - caption: Modelando Dados
     chapters:
@@ -94,10 +99,12 @@ parts:
       sections:
       - file: chapters/15/01/arquiteturas_transformacao.md
     - file: chapters/16/intro.md 
-  # - caption: Entregando dados
+  # - caption: Consumindo dados
   #   chapters:
   #   Boas práticas de Data Viz
+  #   Relatórios interativos
   #   BI
+  #   Governança de Dados
   #   BI na prática (Data studio?)
   - caption: Tópicos Adicionais
     chapters:
