--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,7 @@ repository:
 html:
   use_issues_button: true
   use_repository_button: true
+  google_analytics_id: G-XDLZWNXBSG
 
 exclude_patterns:
 - venv/*
