--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,7 @@ html:
   use_issues_button: true
   use_repository_button: true
   google_analytics_id: G-XDLZWNXBSG
+  baseurl: "https://www.engdeanalytics.com.br"
 
 exclude_patterns:
 - venv/*
