--- a/_toc.yml
+++ b/_toc.yml
@@ -94,10 +94,20 @@ parts:
   - caption: Transformando dados
     chapters:
     - file: chapters/13/intro.md
+      sections:
+        - file: chapters/13/01/etl.md
+        - file: chapters/13/02/elt.md
+        - file: chapters/13/03/processo_elt.md
+        - file: chapters/13/leia_mais.md
     - file: chapters/14/intro.md
+      sections:
+        - file: chapters/14/01/acessando_dados.md
+        - file: chapters/14/02/tipos_de_ingestao.md
+        - file: chapters/14/03/exemplo_pratico.md
     - file: chapters/15/intro.md
       sections:
       - file: chapters/15/01/arquiteturas_transformacao.md
+      - file: chapters/15/02/dbt.md
     - file: chapters/16/intro.md 
   # - caption: Consumindo dados
   #   chapters:
